// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator render correctly Calculator step 1 closed 1`] = `
<section
  className="calculator"
>
  <a
    name="calculator"
  />
  <form
    action="#"
    className="calculator__form"
    onSubmit={[Function]}
  >
    <h2
      className="calculator__title"
    >
      Кредитный калькулятор
    </h2>
    <div
      className="calculator__flex-container"
    >
      <div
        className="calculator__container"
      >
        <fieldset
          className="calculator__purpose"
        >
          <h3
            className="calculator__step"
          >
            Шаг 1. Цель кредита
          </h3>
          <div
            className="calculator__purpose-select"
            onClick={[Function]}
          >
            <span
              className="calculator__select-title"
            >
              Выберите цель кредита
            </span>
            <ul
              className="calculator__purpose-list calculator__purpose-list--hidden"
            >
              <li
                className="calculator__purpose-item"
                id="mortgage"
                onClick={[Function]}
              >
                Ипотечное кредитование
              </li>
              <li
                className="calculator__purpose-item"
                id="car"
                onClick={[Function]}
              >
                Автомобильное кредитование
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </form>
</section>
`;

exports[`Calculator render correctly Calculator step 1 opened 1`] = `
<section
  className="calculator"
>
  <a
    name="calculator"
  />
  <form
    action="#"
    className="calculator__form"
    onSubmit={[Function]}
  >
    <h2
      className="calculator__title"
    >
      Кредитный калькулятор
    </h2>
    <div
      className="calculator__flex-container"
    >
      <div
        className="calculator__container"
      >
        <fieldset
          className="calculator__purpose"
        >
          <h3
            className="calculator__step"
          >
            Шаг 1. Цель кредита
          </h3>
          <div
            className="calculator__purpose-select calculator__purpose-select--opened"
            onClick={[Function]}
          >
            <span
              className="calculator__select-title"
            >
              Выберите цель кредита
            </span>
            <ul
              className="calculator__purpose-list"
            >
              <li
                className="calculator__purpose-item"
                id="mortgage"
                onClick={[Function]}
              >
                Ипотечное кредитование
              </li>
              <li
                className="calculator__purpose-item"
                id="car"
                onClick={[Function]}
              >
                Автомобильное кредитование
              </li>
            </ul>
          </div>
        </fieldset>
      </div>
    </div>
  </form>
</section>
`;
